# polished

./: .gitignore  Cargo.toml  Makefile  README.md  log.txt  myfile.txt  x86_64-polished-kernel.json
.cargo/: config.toml
bootloader/: Cargo.toml  README.md
bootloader/src/: lib.rs  main.rs
elf_loader/: Cargo.toml  README.md
elf_loader/src/: lib.rs
files/: Cargo.toml  README.md
files/src/: ext2.rs  lib.rs  uefi.rs
gdt/: Cargo.toml  README.md
gdt/src/: lib.rs
graphics/: Cargo.toml  README.md
graphics/src/: drawing.rs  framebuffer.rs  lib.rs
interrupts/: Cargo.toml  README.md
interrupts/src/: cpu_exceptions.rs  hardware_interrupts.rs  lib.rs
kernel/: Cargo.toml  README.md  build.rs  linker.ld
kernel/src/: gdt.rs  main.rs  memory.rs
memory/: Cargo.toml  README.md
memory/src/: lib.rs
panic_handler/: Cargo.toml  README.md
panic_handler/src/: lib.rs
ps2/: Cargo.toml  README.md
ps2/src/: lib.rs
scancodes/: Cargo.toml  README.md
scancodes/src/: lib.rs
serial_logging/: Cargo.toml  README.md
serial_logging/src/: kprint.rs  lib.rs
syscalls/: Cargo.toml
syscalls/src/: lib.rs
workspace-default-package/: Cargo.toml
workspace-default-package/src/: main.rs
x86_commands/: Cargo.toml  README.md
x86_commands/src/: lib.rs
