[workspace]
members = [
    "bootloader",
    "kernel",
    "elf_loader",
    "files",
    "serial_logging",
    "graphics",
    "workspace-default-package",
    "interrupts",
]
resolver = "3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
uefi = { version = "0.35.0" }
log = "0.4.27"
once_cell = { version = "1.21.3", default-features = false }
