[workspace]
members = [
  "bootloader",
  "kernel",
  "elf_loader",
  "files",
  "serial_logging",
  "graphics",
  "workspace-default-package",
  "interrupts",
  "scancodes",
  "gdt",
  "ps2",
  "panic_handler",
  "memory",
  "x86_commands",
]
resolver = "3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
uefi = { version = "0.35.0" }
log = "0.4.27"
once_cell = { version = "1.21.3", default-features = false }
x86_64 = "0.15.2"
