[workspace]
members = [
  "bootloader",
  "kernel",
  "elf_loader",
  "files",
  "serial_logging",
  "graphics",
  "workspace-default-package",
  "interrupts",
  "scancodes",
  "gdt",
  "ps2",
  "panic_handler",
  "memory",
  "x86_commands",
  "syscalls",
]
resolver = "3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
log = "0.4.27"
once_cell = { version = "1.21.3", default-features = false }
uefi = { version = "0.35.0" }
x86_64 = "0.15.2"
