[package]
name = "bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
uefi = { workspace = true, features = ["alloc", "global_allocator", "logger", "panic_handler"] }
log = { workspace = true }
elf_loader = { path = "../elf_loader" }
graphics = { path = "../graphics", features = ["uefi"] }
