[package]
name = "elf_loader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
uefi = { workspace = true, features = ["alloc", "logger", "panic_handler"] }
files = { path = "../files" }
xmas-elf = "0.10.0"
log = { workspace = true }
graphics = { path = "../graphics" }
