[package]
description = "Modular, safe ELF loader for Polished OS, supporting UEFI and no_std environments."
edition = "2024"
license = "Zlib"
name = "polished_elf_loader"
readme = "./README.md"
repository = "https://github.com/ofluffydev/polished"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[features]
uefi = ["dep:uefi"]

default = []

[dependencies]
log = { workspace = true }
polished_files = { version = "0.1.0", path = "../files", default-features = false }
polished_graphics = { version = "0.1.0", path = "../graphics", default-features = false }
uefi = { workspace = true, optional = true, features = [
  "alloc",
  "logger",
  "panic_handler",
] }
xmas-elf = "0.10.0"
