[package]
description = "File loading and (future) filesystem abstraction for Polished OS, supporting UEFI and no_std environments."
edition = "2024"
license = "Zlib"
name = "polished_files"
readme = "./README.md"
repository = "https://github.com/ofluffydev/polished"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[features]
ext2 = []
uefi = ["dep:uefi"]

default = []

[dependencies]
polished_graphics = { version = "0.1.0", path = "../graphics", default-features = false }
polished_serial_logging = { version = "0.1.0", path = "../serial_logging" }
uefi = { workspace = true, optional = true, features = [
  "alloc",
  "logger",
  "panic_handler",
] }
