[package]
description = "A graphics library for the Polished OS project."
edition = "2024"
license = "Zlib"
name = "polished_graphics"
readme = "./README.md"
repository = "https://github.com/ofluffydev/polished"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[features]
# The `uefi` feature is now non-default and must be enabled manually.
uefi = ["dep:uefi"]

default = []

[dependencies]
libm = "0.2.15"
log = { workspace = true }
uefi = { workspace = true, optional = true, features = [
  "alloc",
  "logger",
  "panic_handler",
] }
