[package]
name = "polished_interrupts"
version = "0.1.0"
edition = "2024"
readme = "./README.md"
license = "Zlib"
repository = "https://github.com/ofluffydev/polished"

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
x86_64 = "0.15.2"
polished_serial_logging = { path = "../serial_logging" }
once_cell = { workspace = true }
polished_scancodes = { path = "../scancodes" }
