[package]
edition = "2024"
license = "Zlib"
name = "polished_interrupts"
readme = "./README.md"
repository = "https://github.com/ofluffydev/polished"
version = "0.1.0"

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
once_cell = { workspace = true }
polished_scancodes = { path = "../scancodes" }
polished_serial_logging = { path = "../serial_logging" }
x86_64 = "0.15.2"
