[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
serial_logging = { path = "../serial_logging" }
elf_loader = { path = "../elf_loader" }
graphics = { path = "../graphics", default-features = false }
interrupts = { path = "../interrupts" }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
once_cell = {workspace = true}
linked_list_allocator = "0.10.5"
x86_64 = { workspace = true }
gdt = { path = "../gdt" }
ps2 = { path = "../ps2" }
panic_handler = { path = "../panic_handler" }
memory = { path = "../memory" }