[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
readme = "./README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ofluffydev/polished"

[dependencies]
polished_serial_logging = { path = "../serial_logging" }
polished_elf_loader = { path = "../elf_loader", default-features = false }
polished_graphics = { path = "../graphics", default-features = false }
polished_files = { path = "../files", default-features = false }
polished_interrupts = { path = "../interrupts" }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
once_cell = { workspace = true }
linked_list_allocator = "0.10.5"
x86_64 = { workspace = true }
polished_gdt = { path = "../gdt" }
polished_ps2 = { path = "../ps2" }
polished_panic_handler = { path = "../panic_handler" }
polished_memory = { path = "../memory" }
