[package]
edition = "2024"
license = "Apache-2.0 OR MIT"
name = "kernel"
readme = "./README.md"
repository = "https://github.com/ofluffydev/polished"
version = "0.1.0"

[features]
ext2 = ["polished_files/ext2"]

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
once_cell = { workspace = true }
polished_elf_loader = { path = "../elf_loader", default-features = false }
polished_files = { path = "../files", default-features = false }
polished_gdt = { path = "../gdt" }
polished_graphics = { path = "../graphics", default-features = false }
polished_interrupts = { path = "../interrupts" }
polished_memory = { path = "../memory" }
polished_panic_handler = { path = "../panic_handler" }
polished_ps2 = { path = "../ps2" }
polished_serial_logging = { path = "../serial_logging" }
polished_syscalls = { path = "../syscalls" }
x86_64 = { workspace = true }
